Init the dropdown controller

--- a/src/app/at-comment-box/at-comment-box.component.html
+++ b/src/app/at-comment-box/at-comment-box.component.html
@@ -9,3 +9,4 @@
     (keydown)="type($event)"
     contenteditable="true"
 ></div>
+<app-at-dropdown [searchString]="searchString"></app-at-dropdown>
