[WIP] Temp stash

--- a/src/app/at-comment-box/at-comment-box.component.html
+++ b/src/app/at-comment-box/at-comment-box.component.html
@@ -8,5 +8,6 @@
     tabindex="0"
     (keydown)="type($event)"
     contenteditable="true"
-></div>
-<app-at-dropdown [searchString]="searchString"></app-at-dropdown>
+>
+<!-- <app-at-dropdown [searchString]="searchString" tabindex="1"></app-at-dropdown> -->
+</div>
