Simmplified the mention box instead of chaining multiple components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,7 @@
-<header>
-  <nav>
-    <ul>
-      <li>Link 1</li>
-      <li>Link 1</li>
-      <li>Link 3</li>
-    </ul>
-  </nav>
-</header>
-
 <main>
-  <h1>{{title}}</h1>
+  <h1>{{ title }}</h1>
   <!-- <router-outlet /> -->
-  <app-at-comment-box></app-at-comment-box>
+  <div id="container">
+    <app-mention-input></app-mention-input>
+  </div>
 </main>
-
-<footer>
-  Copyright &copy; 2024 Michael Tarleton
-</footer>
